major function changes

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "diff": "^8.0.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
   "devDependencies": {
